--- a/tests/README
+++ b/tests/README
@@ -248,3 +248,5 @@ License
     are permitted in any medium without royalty provided the copyright
     notice and this notice are preserved.  This file is offered as-is,
     without any warranty.
+
+    SPDX-License-Identifier: FSFAP
