Do not install libtest-spelling-perl for CI
Installing the libtest-spelling-perl package also installs
libperl-critic-perl, and although we later install a newer version,
Perl::Critic dynamically picks up all of its policy modules.  This
means that installing the Ubuntu package will install obsolete
policy modules that will then be run during the test suite, causing
spurious failures.

--- a/ci/install
+++ b/ci/install
@@ -22,13 +22,12 @@ set -eux
 
 # Install packages.
 apt-get update -qq
-apt-get install aspell cpanminus cppcheck heimdal-multidev libcdb-dev    \
-        libdb-file-lock-perl libcrypt-pbkdf2-perl libdbd-sqlite3-perl    \
-        libdbi-perl libgetopt-long-descriptive-perl libipc-run-perl      \
-        libjson-perl libkrb5-dev libperl6-slurp-perl libreadonly-perl    \
-        libsqlite3-dev libtest-minimumversion-perl libtest-pod-perl      \
-        libtest-spelling-perl libtest-strict-perl pkg-config perl sqlite \
-        tinycdb valgrind
+apt-get install aspell cpanminus cppcheck heimdal-multidev libcdb-dev   \
+        libdb-file-lock-perl libcrypt-pbkdf2-perl libdbd-sqlite3-perl   \
+        libdbi-perl libgetopt-long-descriptive-perl libipc-run-perl     \
+        libjson-perl libkrb5-dev libperl6-slurp-perl libreadonly-perl   \
+        libsqlite3-dev libtest-pod-perl libtest-spelling-perl           \
+        libtest-strict-perl pkg-config perl sqlite tinycdb valgrind
 
 # Dependencies for Perl tests.
 cpanm Perl::Tidy
