--- a/NEWS
+++ b/NEWS
@@ -10,6 +10,10 @@ krb5-strength 3.2 (unreleased)
     copies of passwords before freeing memory.  This reduces the lifetime
     of passwords in memory.
 
+    Rework the check-valgrind target to use the new C TAP Harness valgrind
+    support and automatically check the valgrind log files for errors at
+    the end of the test suite.
+
     Add SPDX-License-Identifier headers to all substantial source files
     other than those in the bundled version of CrackLib.
 
