Update documentation metadata and regenerate
Pick up template changes from DocKnot 3.04.  Adds badges for
GitHub workflows and for the Debian package.

--- a/README
+++ b/README
@@ -2,11 +2,11 @@
                (Kerberos password strength checking plugin)
                Maintained by Russ Allbery <eagle@eyrie.org>
 
-  Copyright 2016 Russ Allbery <eagle@eyrie.org>.  Copyright 2006-2007,
-  2009-2010, 2012-2014 The Board of Trustees of the Leland Stanford Junior
-  University.  Copyright 1993 Alec Muffett.  This software is distributed
-  under a BSD-style license.  Please see the section LICENSE below for
-  more information.
+  Copyright 2016, 2020 Russ Allbery <eagle@eyrie.org>.  Copyright
+  2006-2007, 2009-2010, 2012-2014 The Board of Trustees of the Leland
+  Stanford Junior University.  Copyright 1993 Alec Muffett.  This software
+  is distributed under a BSD-style license.  Please see the section
+  LICENSE below for more information.
 
 BLURB
 
@@ -149,13 +149,6 @@ REQUIREMENTS
   All are available on CPAN.  Some tests will be skipped if the modules
   are not available.
 
-  To enable tests that don't detect functionality problems but are used to
-  sanity-check the release, set the environment variable RELEASE_TESTING
-  to a true value.  To enable tests that may be sensitive to the local
-  environment or that produce a lot of false positives without uncovering
-  many problems, set the environment variable AUTHOR_TESTING to a true
-  value.
-
   To bootstrap from a Git checkout, or if you change the Automake files
   and need to regenerate Makefile.in, you will need Automake 1.11 or
   later.  For bootstrap or if you change configure.ac or any of the m4
@@ -235,7 +228,8 @@ BUILDING AND INSTALLATION
 
   Pass --enable-silent-rules to configure for a quieter build (similar to
   the Linux kernel).  Use make warnings instead of make to build with full
-  GCC compiler warnings (requires a relatively current version of GCC).
+  compiler warnings (requires either GCC or Clang and may require a
+  relatively current version of the compiler).
 
   You can pass the --enable-reduced-depends flag to configure to try to
   minimize the shared library dependencies encoded in the binaries.  This
@@ -265,6 +259,13 @@ TESTING
 
   Do this instead of running the test program directly since it will
   ensure that necessary environment variables are set up.
+
+  To enable tests that don't detect functionality problems but are used to
+  sanity-check the release, set the environment variable RELEASE_TESTING
+  to a true value.  To enable tests that may be sensitive to the local
+  environment or that produce a lot of false positives without uncovering
+  many problems, set the environment variable AUTHOR_TESTING to a true
+  value.
 
 SUPPORT
 
@@ -307,7 +308,7 @@ LICENSE
   The krb5-strength package as a whole is covered by the following
   copyright statement and license:
 
-    Copyright 2016 Russ Allbery <eagle@eyrie.org>
+    Copyright 2016, 2020 Russ Allbery <eagle@eyrie.org>
     Copyright 2006-2007, 2009-2010, 2012-2014
         The Board of Trustees of the Leland Stanford Junior University
     Copyright 1993 Alec Muffett
@@ -346,6 +347,11 @@ LICENSE
   package license but which may require preservation of additional
   notices.  All required notices, and detailed information about the
   licensing of each file, are recorded in the LICENSE file.
+
+  Files covered by a license with an assigned SPDX License Identifier
+  include SPDX-License-Identifier tags to enable automated processing of
+  license information.  See https://spdx.org/licenses/ for more
+  information.
 
   For any copyright range specified by files in this package as YYYY-ZZZZ,
   the range specifies every single year in that closed interval.
