Modernize krb5-strength-wordlist slightly
krb5-strength-wordlist now requires Perl 5.010 or later.  This
allows use of autodie and say, which simplifies the code somewhat.

While updating the version requirements, note that this package
has not recently been tested with Heimdal versions older than 7.0.

--- a/NEWS
+++ b/NEWS
@@ -6,6 +6,8 @@ krb5-strength 3.2 (unreleased)
     --without-cracklib to configure.  This makes the code a bit simpler
     and lighter if you don't intend to ever use the CrackLib support.
 
+    krb5-strength-wordlist now requires Perl 5.010 or later.
+
     Use explicit_bzero instead of memset, where available, to overwrite
     copies of passwords before freeing memory.  This reduces the lifetime
     of passwords in memory.
