--- a/NEWS
+++ b/NEWS
@@ -12,6 +12,10 @@ krb5-strength 3.2 (unreleased)
     copies of passwords before freeing memory.  This reduces the lifetime
     of passwords in memory.
 
+    Skip tests that require the stronger rule configuration in the
+    embedded CrackLib when built against system CrackLib.  This avoids
+    test failures when built with system CrackLib.
+
     Rework the check-valgrind target to use the new C TAP Harness valgrind
     support and automatically check the valgrind log files for errors at
     the end of the test suite.
