--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,6 @@
                     User-Visible krb5-strength Changes
 
-krb5-strength 3.2 (unreleased)
+krb5-strength 3.2 (2020-05-17)
 
     Add new -c (--check-only) option to heimdal-history to check whether a
     password would be accepted without updating the history or password
