Add changelog for upstream 3.2 release

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+krb5-strength (3.2-1) UNRELEASED; urgency=medium
+
+  * New upstream release.
+    - New --check-only option to heimdal-history.
+    - Increase hash iterations for heimdal-history for new hashes.
+    - Use explicit_bzero to overwrite copies of passwords.
+
+ -- Russ Allbery <rra@debian.org>  Sat, 16 May 2020 23:03:34 -0700
+
 krb5-strength (3.1-2) unstable; urgency=medium
 
   * Update standards version to 4.2.1.
