Update debian/copyright and include cracklib license
* Include the full text of the license of the embedded copy of cracklib
  (not used in the Debian build) in debian/copyright, since it's not
  identical to the Artistic license included in common-licenses.

--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,9 @@ krb5-strength (3.2-1) UNRELEASED; urgency=medium
     - New --check-only option to heimdal-history.
     - Increase hash iterations for heimdal-history for new hashes.
     - Use explicit_bzero to overwrite copies of passwords.
+  * Include the full text of the license of the embedded copy of cracklib
+    (not used in the Debian build) in debian/copyright, since it's not
+    identical to the Artistic license included in common-licenses.
 
  -- Russ Allbery <rra@debian.org>  Sat, 16 May 2020 23:03:34 -0700
 
