--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,7 @@ krb5-strength (3.2-1) UNRELEASED; urgency=medium
   * Include the full text of the license of the embedded copy of cracklib
     (not used in the Debian build) in debian/copyright, since it's not
     identical to the Artistic license included in common-licenses.
+  * Update to debhelper compatibility level V13.
 
  -- Russ Allbery <rra@debian.org>  Sat, 16 May 2020 23:03:34 -0700
 
