--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+krb5-strength (3.2-2) UNRELEASED; urgency=medium
+
+  * Change the Debian packaging branch to debian/unstable.
+
+ -- Russ Allbery <rra@debian.org>  Wed, 30 Dec 2020 17:24:22 -0800
+
 krb5-strength (3.2-1) unstable; urgency=medium
 
   * New upstream release.
