--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 krb5-strength (3.2-2) UNRELEASED; urgency=medium
 
   * Change the Debian packaging branch to debian/unstable.
+  * Change canonical packaging repository to Salsa.
 
  -- Russ Allbery <rra@debian.org>  Wed, 30 Dec 2020 17:24:22 -0800
 
