--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,7 @@ krb5-strength (3.2-2) UNRELEASED; urgency=medium
   * Remove Build-Dependency on libfile-slurp-perl, which was not used.
   * Change the Debian packaging branch to debian/unstable.
   * Change canonical packaging repository to Salsa.
+  * Update to standards version 4.5.1 (no changes required).
 
  -- Russ Allbery <rra@debian.org>  Wed, 30 Dec 2020 17:24:22 -0800
 
