Add debian/upstream/metadata file

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ krb5-strength (3.2-2) UNRELEASED; urgency=medium
   * Mark build dependencies used only for the test suite with <!nocheck>.
     Thanks, Helmut Grohne.  (Closes: #978723)
   * Remove Build-Dependency on libfile-slurp-perl, which was not used.
+  * Add debian/upstream/metadata file.
   * Change the Debian packaging branch to debian/unstable.
   * Change canonical packaging repository to Salsa.
   * Update to standards version 4.5.1 (no changes required).
