--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-krb5-strength (3.2-2) UNRELEASED; urgency=medium
+krb5-strength (3.2-2) unstable; urgency=medium
 
   * Mark build dependencies used only for the test suite with <!nocheck>.
     Thanks, Helmut Grohne.  (Closes: #978723)
@@ -9,7 +9,7 @@ krb5-strength (3.2-2) UNRELEASED; urgency=medium
   * Update to standards version 4.5.1 (no changes required).
   * Refresh upstream signing key.
 
- -- Russ Allbery <rra@debian.org>  Wed, 30 Dec 2020 17:24:22 -0800
+ -- Russ Allbery <rra@debian.org>  Wed, 30 Dec 2020 18:11:26 -0800
 
 krb5-strength (3.2-1) unstable; urgency=medium
 
