--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+krb5-strength (3.2-3) UNRELEASED; urgency=medium
+
+  [ Helmut Grohne ]
+  * Fix FTBFS with nocheck profile. (Closes: #983701)
+
+ -- Russ Allbery <rra@debian.org>  Sun, 28 Feb 2021 11:21:48 -0800
+
 krb5-strength (3.2-2) unstable; urgency=medium
 
   * Mark build dependencies used only for the test suite with <!nocheck>.
