Update to standards version 4.6.2

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ krb5-strength (3.2-4) UNRELEASED; urgency=medium
   * Run make maintainer-clean during debian/rules clean, since
     debian/rules build runs ./bootstrap and thus regenerates test files.
     (Closes: #1048564)
+  * Update to standards version 4.6.2 (no changes required).
 
  -- Russ Allbery <rra@debian.org>  Sun, 22 Oct 2023 12:29:39 -0700
 
