--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,11 @@
-krb5-strength (3.2-4) UNRELEASED; urgency=medium
+krb5-strength (3.2-4) unstable; urgency=medium
 
   * Run make maintainer-clean during debian/rules clean, since
     debian/rules build runs ./bootstrap and thus regenerates test files.
     (Closes: #1048564)
   * Update to standards version 4.6.2 (no changes required).
 
- -- Russ Allbery <rra@debian.org>  Sun, 22 Oct 2023 12:29:39 -0700
+ -- Russ Allbery <rra@debian.org>  Sun, 22 Oct 2023 12:37:47 -0700
 
 krb5-strength (3.2-3) unstable; urgency=medium
 
