--- a/README
+++ b/README
@@ -332,7 +332,7 @@ LICENSE
     TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE
     SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 
-    Developed by Derrick Brashear and Ken Hornstein of Sine Nomine
+    Developed by Daria Phoebe Brashear and Ken Hornstein of Sine Nomine
     Associates, on behalf of Stanford University.
 
     The embedded version of CrackLib (all files in the cracklib
