--- a/ci/install
+++ b/ci/install
@@ -14,7 +14,7 @@
 # sometimes the versions on CPAN won't install.  (We'll just skip the test if
 # it won't install.)
 #
-# Copyright 2015-2020 Russ Allbery <eagle@eyrie.org>
+# Copyright 2015-2020, 2023 Russ Allbery <eagle@eyrie.org>
 #
 # SPDX-License-Identifier: MIT
 
@@ -22,11 +22,11 @@ set -eux
 
 # Install packages.
 apt-get update -qq
-apt-get install aspell cpanminus cppcheck heimdal-multidev libcdb-dev   \
-        libdb-file-lock-perl libcrypt-pbkdf2-perl libdbd-sqlite3-perl   \
-        libdbi-perl libgetopt-long-descriptive-perl libipc-run-perl     \
-        libjson-perl libkrb5-dev libperl6-slurp-perl libreadonly-perl   \
-        libsqlite3-dev libtest-pod-perl libtest-spelling-perl           \
+apt-get install aspell cpanminus cppcheck heimdal-multidev libcdb-dev        \
+        libconst-fast-perl libdb-file-lock-perl libcrypt-pbkdf2-perl         \
+        libdbd-sqlite3-perl libdbi-perl libgetopt-long-descriptive-perl      \
+        libipc-run-perl libjson-maybexs-perl libkrb5-dev libperl6-slurp-perl \
+        libsqlite3-dev libtest-pod-perl libtest-spelling-perl                \
         libtest-strict-perl pkg-config perl tinycdb valgrind
 
 # Dependencies for Perl tests.
