--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,6 @@
                     User-Visible krb5-strength Changes
 
-krb5-strength 3.3 (unreleased)
+krb5-strength 3.3 (2023-12-25)
 
     heimdal-history now requires the Perl modules Const::Fast and
     JSON::MaybeXS instead of Readonly and JSON.
