Finalize changes for 3.3-1

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-krb5-strength (3.3-1) UNRELEASED; urgency=medium
+krb5-strength (3.3-1) unstable; urgency=medium
 
   * New upstream release.
     - Increase hash iterations for heimdal-history.
     - Explicitly clear another password before freeing.
 
- -- Russ Allbery <rra@debian.org>  Mon, 25 Dec 2023 18:58:47 -0800
+ -- Russ Allbery <rra@debian.org>  Mon, 25 Dec 2023 19:12:56 -0800
 
 krb5-strength (3.2-4) unstable; urgency=medium
 
